test/TestPhases/namecheck/invalid/exportnotfound.blc
module exposes f, // no declaration 
               Two // can only be exposed implicitly with Count


enum Count
    One
    Two
end

function ff()
end